[gd_scene load_steps=5 format=1]

[ext_resource path="res://arcade_uprade.gd" type="Script" id=1]
[ext_resource path="res://background.png" type="Texture" id=2]
[ext_resource path="res://dani_alpha.fnt" type="BitmapFont" id=3]
[ext_resource path="res://meta_genre.png" type="Texture" id=4]

[node name="arcade_upgrade" type="Node2D"]

transform/pos = Vector2( 511.609, 299.032 )
transform/scale = Vector2( 15.988, 9.34513 )
script/script = ExtResource( 1 )

[node name="background" type="Sprite" parent="."]

transform/pos = Vector2( -0.029665, 0.33674 )
transform/scale = Vector2( 0.0498035, 0.0916558 )
texture = ExtResource( 2 )

[node name="label" type="RichTextLabel" parent="."]

rect/scale = Vector2( 0.1, 0.2 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = -8.0
margin/top = -27.0
margin/right = 168.0
margin/bottom = 25.0
custom_fonts/normal_font = ExtResource( 3 )
custom_colors/default_color = Color( 0, 0, 0, 1 )
bbcode/enabled = false
bbcode/bbcode = "Arcades"
visible_characters = -1

[node name="notifications" type="RichTextLabel" parent="."]

visibility/visible = false
rect/scale = Vector2( 0.08, 0.1 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = -10.0
margin/top = 20.0
margin/right = 486.0
margin/bottom = 71.0
custom_fonts/normal_font = ExtResource( 3 )
custom_colors/default_color = Color( 0, 0, 0, 1 )
bbcode/enabled = false
bbcode/bbcode = "You can't afford that!"
visible_characters = -1

[node name="worst" type="Node2D" parent="."]

editor/display_folded = true
transform/pos = Vector2( -24.6294, -2.60797 )
transform/scale = Vector2( 0.185686, 0.434718 )

[node name="label" type="RichTextLabel" parent="worst"]

rect/scale = Vector2( 0.2, 0.2 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = -12.0
margin/top = 10.0
margin/right = 103.0
margin/bottom = 57.0
custom_fonts/normal_font = ExtResource( 3 )
custom_colors/default_color = Color( 0, 0, 0, 1 )
bbcode/enabled = false
bbcode/bbcode = "Worst"
visible_characters = -1

[node name="worst_button" type="TextureButton" parent="worst"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = -23.0
margin/top = -33.0
margin/right = 19.0
margin/bottom = 9.0
toggle_mode = false
click_on_press = true
enabled_focus_mode = 2
shortcut = null
textures/normal = ExtResource( 4 )
params/resize_mode = 0
params/scale = Vector2( 2, 2 )
params/stretch_mode = 0

[node name="price" type="RichTextLabel" parent="worst"]

rect/scale = Vector2( 0.2, 0.2 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = -12.0
margin/top = 21.0
margin/right = 103.0
margin/bottom = 68.0
custom_fonts/normal_font = ExtResource( 3 )
custom_colors/default_color = Color( 0, 0, 0, 1 )
bbcode/enabled = false
bbcode/bbcode = "Owned"
visible_characters = -1

[node name="decent" type="Node2D" parent="."]

editor/display_folded = true
transform/pos = Vector2( -12.5047, -2.33857 )
transform/scale = Vector2( 0.185686, 0.434718 )

[node name="label" type="RichTextLabel" parent="decent"]

rect/scale = Vector2( 0.2, 0.2 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = -12.0
margin/top = 10.0
margin/right = 103.0
margin/bottom = 57.0
custom_fonts/normal_font = ExtResource( 3 )
custom_colors/default_color = Color( 0, 0, 0, 1 )
bbcode/enabled = false
bbcode/bbcode = "Decent"
visible_characters = -1

[node name="decent_button" type="TextureButton" parent="decent"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = -23.0
margin/top = -33.0
margin/right = 19.0
margin/bottom = 9.0
toggle_mode = false
click_on_press = true
enabled_focus_mode = 2
shortcut = null
textures/normal = ExtResource( 4 )
params/resize_mode = 0
params/scale = Vector2( 2, 2 )
params/stretch_mode = 0

[node name="price" type="RichTextLabel" parent="decent"]

rect/scale = Vector2( 0.2, 0.2 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = -8.0
margin/top = 21.0
margin/right = 124.0
margin/bottom = 95.0
custom_fonts/normal_font = ExtResource( 3 )
custom_colors/default_color = Color( 0, 0, 0, 1 )
bbcode/enabled = false
bbcode/bbcode = "200"
visible_characters = -1

[node name="good" type="Node2D" parent="."]

editor/display_folded = true
transform/pos = Vector2( 0.0924492, -2.33857 )
transform/scale = Vector2( 0.185686, 0.434718 )

[node name="label" type="RichTextLabel" parent="good"]

rect/scale = Vector2( 0.2, 0.2 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = -12.0
margin/top = 10.0
margin/right = 103.0
margin/bottom = 57.0
custom_fonts/normal_font = ExtResource( 3 )
custom_colors/default_color = Color( 0, 0, 0, 1 )
bbcode/enabled = false
bbcode/bbcode = "Good"
visible_characters = -1

[node name="good_button" type="TextureButton" parent="good"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = -23.0
margin/top = -33.0
margin/right = 19.0
margin/bottom = 9.0
toggle_mode = false
click_on_press = true
enabled_focus_mode = 2
shortcut = null
textures/normal = ExtResource( 4 )
params/resize_mode = 0
params/scale = Vector2( 2, 2 )
params/stretch_mode = 0

[node name="price" type="RichTextLabel" parent="good"]

rect/scale = Vector2( 0.2, 0.2 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = -8.0
margin/top = 21.0
margin/right = 124.0
margin/bottom = 95.0
custom_fonts/normal_font = ExtResource( 3 )
custom_colors/default_color = Color( 0, 0, 0, 1 )
bbcode/enabled = false
bbcode/bbcode = "400"
visible_characters = -1

[node name="great" type="Node2D" parent="."]

transform/pos = Vector2( 12.847, -2.33857 )
transform/scale = Vector2( 0.185686, 0.434718 )

[node name="label" type="RichTextLabel" parent="great"]

rect/scale = Vector2( 0.2, 0.2 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = -12.0
margin/top = 10.0
margin/right = 103.0
margin/bottom = 57.0
custom_fonts/normal_font = ExtResource( 3 )
custom_colors/default_color = Color( 0, 0, 0, 1 )
bbcode/enabled = false
bbcode/bbcode = "Great"
visible_characters = -1

[node name="great_button" type="TextureButton" parent="great"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = -23.0
margin/top = -33.0
margin/right = 19.0
margin/bottom = 9.0
toggle_mode = false
click_on_press = true
enabled_focus_mode = 2
shortcut = null
textures/normal = ExtResource( 4 )
params/resize_mode = 0
params/scale = Vector2( 2, 2 )
params/stretch_mode = 0

[node name="price" type="RichTextLabel" parent="great"]

rect/scale = Vector2( 0.2, 0.2 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = -8.0
margin/top = 21.0
margin/right = 124.0
margin/bottom = 95.0
custom_fonts/normal_font = ExtResource( 3 )
custom_colors/default_color = Color( 0, 0, 0, 1 )
bbcode/enabled = false
bbcode/bbcode = "600"
visible_characters = -1

[node name="best" type="Node2D" parent="."]

transform/pos = Vector2( 24.8143, -2.2832 )
transform/scale = Vector2( 0.185686, 0.434718 )

[node name="label" type="RichTextLabel" parent="best"]

rect/scale = Vector2( 0.2, 0.2 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = -12.0
margin/top = 10.0
margin/right = 103.0
margin/bottom = 57.0
custom_fonts/normal_font = ExtResource( 3 )
custom_colors/default_color = Color( 0, 0, 0, 1 )
bbcode/enabled = false
bbcode/bbcode = "Best"
visible_characters = -1

[node name="best_button" type="TextureButton" parent="best"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = -23.0
margin/top = -33.0
margin/right = 19.0
margin/bottom = 9.0
toggle_mode = false
click_on_press = true
enabled_focus_mode = 2
shortcut = null
textures/normal = ExtResource( 4 )
params/resize_mode = 0
params/scale = Vector2( 2, 2 )
params/stretch_mode = 0

[node name="price" type="RichTextLabel" parent="best"]

rect/scale = Vector2( 0.2, 0.2 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = -8.0
margin/top = 21.0
margin/right = 124.0
margin/bottom = 95.0
custom_fonts/normal_font = ExtResource( 3 )
custom_colors/default_color = Color( 0, 0, 0, 1 )
bbcode/enabled = false
bbcode/bbcode = "800"
visible_characters = -1

[node name="confirm" type="LinkButton" parent="."]

rect/scale = Vector2( 0.1, 0.1 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = -27.0
margin/top = 20.0
margin/right = 117.0
margin/bottom = 63.0
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
toggle_mode = false
click_on_press = true
enabled_focus_mode = 0
shortcut = null
text = "Purchase"
underline = 2

[connection signal="button_down" from="worst/worst_button" to="." method="_on_worst_button_button_down"]

[connection signal="button_down" from="decent/decent_button" to="." method="_on_decent_button_button_down"]

[connection signal="button_down" from="good/good_button" to="." method="_on_good_button_button_down"]

[connection signal="button_down" from="great/great_button" to="." method="_on_great_button_button_down"]

[connection signal="button_down" from="best/best_button" to="." method="_on_best_button_button_down"]

[connection signal="button_down" from="confirm" to="." method="_on_confirm_button_down"]


